--- a/installer/resources/themes/console/classic/console.css
+++ b/installer/resources/themes/console/classic/console.css
@@ -523,10 +523,10 @@ h2 {
      padding: 10px;
      border: 1px solid #89f;
      letter-spacing: 0.04em;
-     font-variant: small-caps; 
-     text-transform: capitalize; 
+/*     font-variant: small-caps; */
+     text-transform: uppercase; 
      background: #fff;
-     text-shadow: 0px 0px 1px rgba(0, 0, 32, 0.7);
+     text-shadow: 0px 1px 1px #99f;
 }
 
 h3 {
@@ -536,6 +536,8 @@ h3 {
      letter-spacing: 0.04em;
      margin-bottom: 10px;
      background: #fff;
+     text-transform: uppercase;
+     text-shadow: 0px 1px 1px #99f;
 }
 
 h2, h3 {
