--- a/installer/resources/themes/console/dark/console.css
+++ b/installer/resources/themes/console/dark/console.css
@@ -1,4 +1,6 @@
-/* I2P Console theme: "Camo" by dr|z3d. Aka "dark". As in ops. */
+/* I2P Theme: Camo aka Dark */
+/* Description: Military Grade. */
+/* Author: dr|z3d */
 
 body {
      margin: 20px 5px 0 15px;
