--- a/installer/resources/themes/console/dark/console.css
+++ b/installer/resources/themes/console/dark/console.css
@@ -606,7 +606,7 @@ a:hover{
 }
 
 .links li {
-     list-style-image: url("../images/link_dark.png") !important;
+     list-style-image: url("images/link.png") !important;
 }
 
 p {
