Console theme tweaks.
Monotone-Parent: 8d480e811cd9f14af3a4a9a52302eb28dac725f1
Monotone-Revision: 7342d08c58f09549f7cde41e78498f55e209fffb

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2010-11-25T17:24:56
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/classic/console.css
+++ b/installer/resources/themes/console/classic/console.css
@@ -728,7 +728,7 @@ p {
 }
 
 .links li {
-     list-style-image: url("../images/link.png") !important;
+     list-style-image: url("images/link.png") !important;
 }
 
 a:link{
