--- a/installer/resources/themes/console/light/console.css
+++ b/installer/resources/themes/console/light/console.css
@@ -589,7 +589,7 @@ a:active{
 }
 
 .links li {
-     list-style: url(../images/link.png) !important;
+     list-style: url(images/link.png) !important;
      padding-bottom: -2px;
      text-align: justify;
      line-height: 120% !important;
