--- a/installer/resources/themes/console/midnight/console.css
+++ b/installer/resources/themes/console/midnight/console.css
@@ -759,7 +759,7 @@ p {
 }
 
 .links li {
-     list-style-image: url("../images/link_dark.png") !important;
+     list-style-image: url("images/link.png") !important;
 }
 
 a:link{
