More classic tweaks.
Monotone-Parent: 7342d08c58f09549f7cde41e78498f55e209fffb
Monotone-Revision: ddcd9769c3e576772c360746bf1c9e6266057e7f

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2010-11-25T17:45:29
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/classic/console.css
+++ b/installer/resources/themes/console/classic/console.css
@@ -157,7 +157,7 @@ div.routersummary {
      width: 193px;
      color: inherit;
      margin: 0;
-     padding: 10px 1px 7px 1px;
+     padding: 9px 1px 7px 1px;
      text-align: center !important;
      border: 1px solid #89f;
      border-bottom: 1px solid #89f;
@@ -509,7 +509,7 @@ h1 {
      border: 1px solid #89f;
      border-bottom: 1px solid #89f;
      border-right: 1px solid #89f;
-     padding: 16px 10px 16px 10px;
+     padding: 19px 10px;
      margin: 0 1px 0 200px;
      line-height: 93%;
      text-transform: uppercase;
