Readme (eng) finessing; Dark tweaks.
Monotone-Parent: 407d0dcfac6ad2538d5a1982452f70da21334d87
Monotone-Revision: cad75d73bf8fab9567ef5be1823c8fdca8a2282e

Monotone-Author: z3d@mail.i2p
Monotone-Date: 2010-11-26T09:04:54
Monotone-Branch: i2p.i2p

--- a/installer/resources/themes/console/dark/console.css
+++ b/installer/resources/themes/console/dark/console.css
@@ -583,7 +583,8 @@ code {
      text-align: left;
      font: 9pt "Lucida Console", "DejaVu Sans Mono", Courier, mono;
      color: #dd0;
-     padding: 0 5px;
+     padding: 1px 2px;
+     background: #030;
 }
 
 a:link, h2 a:link{
